# blog-react-rust-postgres

./: LICENSE  README.md
backend/: .gitignore  Cargo.toml  README.md
backend/migrations/20170130062122_create_posts/: up.sql
backend/src/: lib.rs  main.rs  models.rs
frontend/: README.md  package.json
frontend/public/: index.html
frontend/src/: index.css  index.js
frontend/src/actions/: index.js
frontend/src/components/: App.js  Footer.js  Link.js  Post.js  PostList.js
frontend/src/containers/: AddPost.js  FilterLink.js  VisiblePostList.js
frontend/src/reducers/: index.js  posts.js  visibilityFilter.js
