[package]
name = "blog"
version = "0.1.0"
authors = ["Julian Tescher <jatescher@gmail.com>"]

[dependencies]
rocket = "0.1.6"
rocket_codegen = "0.1.6"
rocket_contrib = "0.1.6"
dotenv = "0.8.0"
diesel = { version = "0.9.0", features = ["postgres"] }
diesel_codegen = { version = "0.9.0", features = ["postgres"] }
r2d2 = "0.7.1"
r2d2-diesel = "0.9.0"
lazy_static = "0.2.2"
json = "0.11.5"
serde = "0.8.0"
serde_json = "0.8.0"
serde_derive = "0.8.0"
